--- a/frontend/portfolio_homepage/src/Authentication/styles.css
+++ b/frontend/portfolio_homepage/src/Authentication/styles.css
@@ -1,5 +1,3 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
 /* Document
    ========================================================================== */
 
@@ -15,16 +13,6 @@ html {
 
 /* Sections
    ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-    margin: 0;
-    background-color: white;
-
-}
 
 /**
  * Render the `main` element consistently in IE.
@@ -8389,7 +8377,6 @@ video {
 }
 
 .subpixel-antialiased {
-    -webkit-font-smoothing: auto;
     -moz-osx-font-smoothing: auto;
 }
 
