--- a/frontend/portfolio_homepage/src/Desktop/Desktop.css
+++ b/frontend/portfolio_homepage/src/Desktop/Desktop.css
@@ -1,7 +1,3 @@
-body {
-    background: #22223B;
-}
-
 img {
     max-height: 200px;
     max-width: 200px;
